packages/docs/content/4.1/api/CFormInput.api.mdx

```jsx
import { CFormInput } from '@coreui/react'
// or
import CFormInput from '@coreui/react/src/components/form/CFormInput'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **className** | A string of all className you want applied to the component. | `string` | - |
| **disabled** | Toggle the disabled state for the component. | `boolean` | - |
| **feedback** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable feedback. | `ReactNode` | - |
| **feedbackInvalid** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable feedback. | `ReactNode` | - |
| **feedbackValid** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable invalid feedback when using standard HTML form validation which applied two CSS pseudo-classes, `:invalid` and `:valid`. | `ReactNode` | - |
| **floatingLabel** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable valid feedback when using standard HTML form validation which applied two CSS pseudo-classes, `:invalid` and `:valid`. | `ReactNode` | - |
| **invalid** | Set component validation state to invalid. | `boolean` | - |
| **label** <br/><div class="badge bg-primary">4.2.0+</div> | Add a caption for a component. | `ReactNode` | - |
| **onChange** | Method called immediately after the `value` prop changes. | `ChangeEventHandler<HTMLInputElement>` | - |
| **plainText** | Render the component styled as plain text. Removes the default form field styling and preserve the correct margin and padding. Recommend to use only along side `readonly` | `boolean` | - |
| **readOnly** | Toggle the readonly state for the component. | `boolean` | - |
| **size** | Size the component small or large. | `'sm'` \| `'lg'` | - |
| **text** <br/><div class="badge bg-primary">4.2.0+</div> | Add helper text to the component. | `ReactNode` | - |
| **tooltipFeedback** <br/><div class="badge bg-primary">4.2.0+</div> | Display validation feedback in a styled tooltip. | `boolean` | - |
| **type** | Specifies the type of component. | `string` | text |
| **valid** | Set component validation state to valid. | `boolean` | - |
| **value** | The `value` attribute of component. | `string` \| `number` \| `string[]` | - |
